--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,15 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
-	<meta name="author" content="Jonathan McGlone">
+	<meta name="author" content="Zhang Jian">
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>{{ page.title }} | Jonathan McGlone | Librarian, Product Designer, User Researcher, Digital Publisher, Accessibility Specialist, Music Enthusiast, Web Noodler.</title>		
+	<title>{{ page.title }} | Zhang Jian | C++ enthusiast.</title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
+	<script src="https://app.embed.im/snow.js" defer></script>
 	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
