--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
-	<meta name="author" content="Jonathan McGlone">
+	<meta name="author" content="Zhang Jian">
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>{{ page.title }} | Jonathan McGlone | Librarian, Product Designer, User Researcher, Digital Publisher, Accessibility Specialist, Music Enthusiast, Web Noodler.</title>		
+	<title>{{ page.title }} | Zhang Jian | C++ enthusiast.</title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
